--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         Crea Playlist
                     </div>
                     <!-- INSERIRE L'HOOVER -->
-                    <ul>
+                    <ul class="scrollbar">
                         <li>Nome playlist</li>
                         <li>Nome playlist</li>
                         <li>Nome playlist</li>
