--- a/index.html
+++ b/index.html
@@ -66,8 +66,15 @@
                         <li>NUOVE USCITE</li>
                         <li>SCOPRI</li>
                     </ul> 
-                </div>
-                    
+                </div> 
+                <div class="image">
+                    <img src="img/metal_lifting.jpg" alt="heavy-metal">
+                    <img src="img/stranger.jpeg" alt="heavy-metal">
+                    <img src="img/aquietplace.jpeg" alt="heavy-metal">
+                    <img src="img/split.jpeg" alt="heavy-metal">
+                    <img src="img/cure.jpeg" alt="heavy-metal">
+                    <img src="img/sinister.jpeg" alt="heavy-metal">
+                </div>     
             </div>
        </main>
 
