--- a/index.html
+++ b/index.html
@@ -67,14 +67,73 @@
                         <li>SCOPRI</li>
                     </ul> 
                 </div> 
-                <div class="image">
-                    <img src="img/metal_lifting.jpg" alt="heavy-metal">
-                    <img src="img/stranger.jpeg" alt="heavy-metal">
-                    <img src="img/aquietplace.jpeg" alt="heavy-metal">
-                    <img src="img/split.jpeg" alt="heavy-metal">
-                    <img src="img/cure.jpeg" alt="heavy-metal">
-                    <img src="img/sinister.jpeg" alt="heavy-metal">
-                </div>     
+                <div class="text-title">
+                    <h2>Recently played</h2>
+                </div>
+                <!-- SONGS TOP -->
+                <div class="container-songs">
+                    <!-- SIGLE SONGS -->
+                    <div class="songs">
+                        <img src="img/metal_lifting.jpg" alt="Heavy-Metal">
+                        <h3>Heavy Metal</h3>
+                        <span>Subtitle</span>
+                    </div>
+                    <div>
+                    <!-- SIGLE SONGS -->
+                    </div>
+                    <div class="songs">
+                        <img src="img/stranger.jpeg" alt="Stranger-Things">
+                        <h3>Strenger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
+                        <span>Kyle Dixon & Micheal Stein</span>
+                    </div>
+                    <!-- SIGLE SONGS -->
+                    <div class="songs">
+                        <img src="img/aquietplace.jpeg" alt="A-quiet-place">
+                        <h3>A queit place</h3>
+                        <span>Subtitle</span>
+                    </div>
+                    <!-- SIGLE SONGS -->
+                    <div class="songs">
+                        <img src="img/split.jpeg" alt="Split">
+                        <h3>Spilt</h3>
+                        <span>Subtitle</span>
+                    </div>
+                    <!-- SIGLE SONGS -->
+                    <div class="songs">
+                        <img src="img/cure.jpeg" alt="Cure">
+                        <h3>A cure of wellness</h3>
+                        <span>Subtitle</span>
+                    </div>
+                    <!-- SIGLE SONGS -->
+                    <div class="songs">
+                        <img src="img/sinister.jpeg" alt="Sinister">
+                        <h3>Sinister</h3>
+                        <span>Subtitle</span>
+                    </div>
+                </div>
+
+                <!-- TEXT MIDDLE -->
+                <div class="text-title">
+                    <h3>Creato per John Doe</h3>
+                    <span>Più ascolti, più accurati saranno i suggerimenti.</span>
+                </div>
+               
+                <!-- SINGLE SONGS MIDDLE -->
+                <div class="container-songs">
+                    <!-- SIGLE SONGS -->
+                    <div class="songs">
+                        <img src="img/radar.jpeg" alt="radar">
+                        <h3>Sinister</h3>
+                        <span>Subtitle</span>
+                    </div>
+                    <!-- SIGLE SONGS -->
+                    <div class="songs">
+                        <img src="img/mixdaily.jpeg" alt="mixdaily">
+                        <h3>Sinister</h3>
+                        <span>Subtitle</span>
+                    </div>
+                </div>
+                
             </div>
        </main>
 
