--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <title>Spotifyweb</title>
 </head>
 <body>
-    <div class="top-bar"></div>
+    <div class="top-bar">
+        <a href="#">EFFETUA L'UPGRADE</a>
+    </div>
    <div class="container-wrap">
        <!-- MAIN -->
        <main>
@@ -129,6 +131,27 @@
                     <!-- SIGLE SONGS -->
                     <div class="songs">
                         <img src="img/mixdaily.jpeg" alt="mixdaily">
+                        <h3>Sinister</h3>
+                        <span>Subtitle</span>
+                    </div>
+                </div>
+
+                <div class="text-title">
+                    <h3>Artisiti più popolari</h3>
+                    <span>Più ascolti, più accurati saranno i suggerimenti.</span>
+                </div>
+
+                <!-- SINGLE SOGNS BOTTOM -->
+                <div class="container-songs-bottom">
+                    <!-- SIGLE SONGS -->
+                    <div class="songs">
+                        <img src="img/youg.jpeg" alt="youg">
+                        <h3>Sinister</h3>
+                        <span>Subtitle</span>
+                    </div>
+                    <!-- SIGLE SONGS -->
+                    <div class="songs">
+                        <img src="img/einaudi.jpeg" alt="einaudi">
                         <h3>Sinister</h3>
                         <span>Subtitle</span>
                     </div>
