--- a/index.html
+++ b/index.html
@@ -18,27 +18,30 @@
        <main>
            <!-- INSERIRE CONTENUTI NELLA NAV -->
             <div class="nav-main">
-                <!-- LOGO -->
-                <div class="logo">
+                 <!-- LOGO -->
+                 <div class="logo">
                     <img src="img/logo.svg" alt="logo-spotify">
                 </div>
-                <!-- LIST ACTIONS -->
-                <div class="actions-nav">
-                    <ul>
-                        <li>Home</li>
-                        <li>Cerca</li>
-                        <li>La tua libreria</li>
-                    </ul>
-                </div>
-                <!-- PLAYLIST -->
-                <div class="playlist-nav">
-                    <!-- INSERIRE FONTAWSOME -->
-                    <h2>Playlist</h2>
-                    <!-- INSERIRE FONTAWSOME -->
-                    <div class="make-playlist">
-                        Crea Playlist
+                <!-- CONTAINER -->
+                <!-- INSERIRE IL TAG A PER RENDERE RESPONSIVE ANCHE AL LOGO E ALLA NAV TOP -->
+                    <div class="actions-nav">
+                        <ul>
+                            <li> <img src="img/home.svg" alt=""> Home</li>
+                            <li> <img src="img/search.svg" alt=""> Cerca</li>
+                            <li> <img src="img/libreria.svg" alt=""> La tua libreria</li>
+                        </ul>
                     </div>
-                    <!-- INSERIRE L'HOOVER -->
+                    <!-- PLAYLIST -->
+                    <div class="playlist-nav">
+                        <!-- INSERIRE IMMAGINI-->
+                        <h2>Playlist</h2>
+                        <!-- INSERIRE IMMAGINI-->
+                        <div class="make-playlist">
+                          <span>+</span>  Crea Playlist
+                        </div>
+                        <!-- INSERIRE L'HOOVER -->
+                    </div>
+                    <!-- INSERIRE IL TAG A a TUTTI  -->
                     <ul class="scrollbar">
                         <li>Nome playlist</li>
                         <li>Nome playlist</li>
@@ -48,14 +51,13 @@
                         <li>Nome playlist</li>
                         <li>Nome playlist</li>
                     </ul>
-                </div>
-
-                <!-- INFORMATION USERS -->
-                <div class="user">
-                    <div>Installa app</div>
-                    <div>John Doe</div>
-                </div>
-
+    
+                    <!-- INFORMATION USERS -->
+                    <div class="user">
+                        <div class="dwn"> <img src="img/download.svg" alt=""> Installa app</div>
+                        <div class="orizontal-boarder"></div>
+                        <div class="profiles"> <img src="img/profile.svg" alt=""> John Doe</div>
+                    </div>
             </div>
              <!-- INSERIRE CONTENUTI NEL MAIN -->
             <div class="content-main">
