IN LOGO LOGO-SMALL AND MEDIA QUARY

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                  <!-- LOGO -->
                  <div class="logo">
                     <img src="img/logo.svg" alt="logo-spotify">
+                    <img src="img/logo-small.svg" alt="">
                 </div>
                 <!-- CONTAINER -->
                 <!-- INSERIRE IL TAG A PER RENDERE RESPONSIVE ANCHE AL LOGO E ALLA NAV TOP -->
