--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div class="user">
                         <div class="dwn"> <img src="img/download.svg" alt=""> <span class="media-quary">Installa app</span></div>
                         <div class="orizontal-boarder"></div>
-                        <div class="profiles"> <img src="img/profile.svg" alt=""> <span class="media-quary">John Doe</span> </div>
+                        <div class="profiles"> <img src="img/profile.svg" alt=""> <span class="media-quary">Bob Lee Swagger</span> </div>
                     </div>
             </div>
              <!-- INSERIRE CONTENUTI NEL MAIN -->
@@ -168,7 +168,46 @@
 
        <!-- FOOTER -->
        <footer>
+           <!-- FOOTER LEFT -->
+                <div class="footer-six">
+                    <img src="img/sinister.jpeg" alt="sinister">
+                    <div class="music-text">
+                        <h3>Sinister</h3>
+                        <span>Brano Nome</span>
+                    </div>
+                    <div class="font-awesome">
+                        <i class="far fa-heart"></i>
+                        <i class="far fa-folder"></i>
+                    </div>
+                </div>
+                <!-- FOOTER CENTER -->
+                <div class="audiofuctions">
+                    <div class="button">
+                        <i class="fas fa-random"></i>
+                        <i class="fas fa-step-backward"></i>
+                        <i class="far fa-play-circle"></i>
+                        <i class="fas fa-step-forward"></i>
+                        <i class="fas fa-redo-alt"></i>
+                    </div>
+                    <div class="timesong">
+                        <span class="time">0:25</span>
+                        <div class="bar"></div>
+                        <span class="time">4:35</span>
+                    </div>
+                </div>
+
                 
+                <!-- FOOTER RIGHT -->
+                <div class="footer-right">
+                        <div class="audiofuctions">
+                            <div class="button">
+                                <i class="fas fa-bars"></i>
+                                <i class="fas fa-desktop"></i>
+                                <i class="fas fa-volume-up"></i>
+                                <div class="bar-right"></div>
+                            </div>
+                        </div>
+                </div>
        </footer>
    </div>
 </body>
